# backend/app/controllers/v1/penggalangan/penggalangan_dana_controller.rb
@@ -2,11 +2,21 @@ class V1::Penggalangan::PenggalanganDanaController < ApplicationController
   # before_action :
   #Untuk membuat penggalangan dana beasiswa
   def createPenggalanganDanaBeasiswa
+    date_now = DateTime.now
+    first_day_of_month = Date.new(date_now.year, date_now.month, 1)
+    start_of_week = first_day_of_month - first_day_of_month.wday
+    # Calculate the difference in weeks between the start_of_week and the given date
+    week_number = (date_now - start_of_week).to_i / 7 + 1
     penggalangan_dana_beasiswa = Pengajuan::PengajuanBantuan.pengajuan_baru_admin
     if penggalangan_dana_beasiswa.present?
       render json: {
         response_code: Constants::ERROR_CODE_VALIDATION,
         response_message: "Penggalangan Dana Beasiswa sedang berlangsung!"
+        }, status: :unprocessable_entity
+    elsif week_number != 1
+      render json: {
+        response_code: Constants::ERROR_CODE_VALIDATION,
+        response_message: "Gagal membuat penggalangan dana Beasiswa karena sudah minggu ke #{week_number} di Bulan #{date_now.strftime("%B")}!"
         }, status: :unprocessable_entity
     else
       data_admin = User::Admin.where(id: params[:id]).first
@@ -17,47 +27,41 @@ class V1::Penggalangan::PenggalanganDanaController < ApplicationController
       dana_yang_dibutuhkan = 0
       status_pengajuan = Enums::StatusPengajuan::ADMIN
       status_penyaluran = Enums::StatusPenyaluran::NULL
-      waktu_galang_dana = DateTime.parse(params[:waktu_galang_dana])
-      if (waktu_galang_dana - DateTime.now).to_i + 1 < 1
+      next_month = first_day_of_month.next_month(7)
+      waktu_galang_dana = next_month - 1
+      pengajuan_bantuan = Pengajuan::PengajuanBantuan.new(
+        bank: bank,
+        jenis: "Beasiswa",
+        nama: nama, 
+        no_identitas_pengaju: no_identitas_pengaju, 
+        no_telepon: nomor_telepon,
+        waktu_galang_dana: waktu_galang_dana, 
+        judul_galang_dana: params[:judul_galang_dana], 
+        deskripsi: params[:deskripsi], 
+        dana_yang_dibutuhkan: dana_yang_dibutuhkan, 
+        status_pengajuan: status_pengajuan,
+        status_penyaluran: status_penyaluran,
+      )
+      total_nominal_terkumpul = 0
+      penggalangan_dana = Penggalangan::PenggalanganDana.new(
+        total_pengajuan: params[:total_pengajuan],
+        total_nominal_terkumpul: total_nominal_terkumpul,
+      )
+      array_of_pengajuan_bantuan_id = []
+      array_of_pengajuan_bantuan_id << pengajuan_bantuan.id
+      penggalangan_dana.assign_attributes({pengajuan_bantuan_id: array_of_pengajuan_bantuan_id})
+      if penggalangan_dana.save and pengajuan_bantuan.save
         render json: {
-          response_code: Constants::ERROR_CODE_VALIDATION,
-          response_message: "Tanggal harus lebih dari hari sekarang!"
-          }, status: :unprocessable_entity
+        response_code: Constants::RESPONSE_CREATED, 
+        response_message: "Success", 
+        data: {penggalangan_dana: penggalangan_dana, pengajuan_bantuan: pengajuan_bantuan}
+        }, status: :created
       else
-        pengajuan_bantuan = Pengajuan::PengajuanBantuan.new(
-          bank: bank,
-          jenis: "Beasiswa",
-          nama: nama, 
-          no_identitas_pengaju: no_identitas_pengaju, 
-          no_telepon: nomor_telepon,
-          waktu_galang_dana: waktu_galang_dana, 
-          judul_galang_dana: params[:judul_galang_dana], 
-          deskripsi: params[:deskripsi], 
-          dana_yang_dibutuhkan: dana_yang_dibutuhkan, 
-          status_pengajuan: status_pengajuan,
-          status_penyaluran: status_penyaluran,
-        )
-        total_nominal_terkumpul = 0
-        penggalangan_dana = Penggalangan::PenggalanganDana.new(
-          total_pengajuan: params[:total_pengajuan],
-          total_nominal_terkumpul: total_nominal_terkumpul,
-        )
-        array_of_pengajuan_bantuan_id = []
-        array_of_pengajuan_bantuan_id << pengajuan_bantuan.id
-        penggalangan_dana.assign_attributes({pengajuan_bantuan_id: array_of_pengajuan_bantuan_id})
-        if penggalangan_dana.save and pengajuan_bantuan.save
-          render json: {
-          response_code: Constants::RESPONSE_CREATED, 
-          response_message: "Success", 
-          data: {penggalangan_dana: penggalangan_dana, pengajuan_bantuan: pengajuan_bantuan}
-          }, status: :created
-        else
-          render json: {
-          response_code: Constants::ERROR_CODE_VALIDATION,
-          response_message: {penggalangan_dana: penggalangan_dana.errors.full_messages, pengajuan_bantuan: pengajuan_bantuan.errors.full_messages}
-          }, status: :unprocessable_entity
-        end   
-      end
+        render json: {
+        response_code: Constants::ERROR_CODE_VALIDATION,
+        response_message: {penggalangan_dana: penggalangan_dana.errors.full_messages, pengajuan_bantuan: pengajuan_bantuan.errors.full_messages}
+        }, status: :unprocessable_entity
+      end   
     end
   end
 
@@ -244,21 +248,6 @@ class V1::Penggalangan::PenggalanganDanaController < ApplicationController
     end
   end
 
-  def getNominalTerkumpulPenggalanganDana(penggalangan_dana_id)
-    penggalangan_dana = Penggalangan::PenggalanganDana.where(_id: penggalangan_dana_id).first
-    if not penggalangan_dana.donasi_id.present?
-      total_donasi = 0
-    else
-      donasi = Penggalangan::Donasi.approved.where(:id.in => penggalangan_dana.donasi_id)
-      if not donasi.present?
-        total_donasi = 0
-      else
-        total_donasi = donasi.pluck(:nominal).inject(0, :+)
-      end
-      return total_donasi
-    end
-  end
-
   def getPenggalanganDanaNonBeasiswaByKategori
     if params[:kategori] != "Medis" and params[:kategori] != "Bencana" and params[:kategori] != "Duka"
       render json: {
@@ -325,29 +314,33 @@ class V1::Penggalangan::PenggalanganDanaController < ApplicationController
     else
       if not penggalangan_dana.pengajuan_bantuan_id.kind_of?(Array)
         pengajuan_bantuan = Pengajuan::PengajuanBantuan.penggalangan_dana.where(id: penggalangan_dana.pengajuan_bantuan_id).first
-        if pengajuan_bantuan.jenis == "NonBeasiswa"
-          non_beasiswa = Pengajuan::NonBeasiswa.where(id: pengajuan_bantuan.non_beasiswa_id).first
-          selected_penggalangan_dana = penggalangan_dana.attributes.merge({
-            :pengajuan_bantuan_id => pengajuan_bantuan.attributes.merge({:non_beasiswa_id => non_beasiswa,}),
-            :data_donatur => getDataDonaturByPenggalanganDana(penggalangan_dana.id),
-            })
-        else
-          selected_penggalangan_dana = penggalangan_dana.attributes.merge(:pengajuan_bantuan_id => pengajuan_bantuan)
-        end
-      else
-        array_of_pengajuan_bantuan_id = []
-        data_pengajuan_beasiswa = []
-        penggalangan_dana.pengajuan_bantuan_id.each do |data_penggalangan_dana|
-          array_of_pengajuan_bantuan_id << data_penggalangan_dana
-        end
-        pengajuan_bantuan = Pengajuan::PengajuanBantuan.penggalangan_dana.where(:id.in => array_of_pengajuan_bantuan_id)
-        pengajuan_bantuan.each_with_index do |data, index|
-          penggalangan_dana.pengajuan_bantuan_id[index] = data
-        end
+        non_beasiswa = Pengajuan::NonBeasiswa.where(id: pengajuan_bantuan.non_beasiswa_id).first
         selected_penggalangan_dana = penggalangan_dana.attributes.merge({
+          :pengajuan_bantuan_id => pengajuan_bantuan,
           :data_donatur => getDataDonaturByPenggalanganDana(penggalangan_dana.id),
+          :penerima_bantuan => non_beasiswa,
+          :durasi => getDurasiPenggalanganDana(penggalangan_dana.id)
+          })   
+      else
+        penanggung_jawab = {}
+        data_pengajuan_beasiswa = []
+
+        penggalangan_dana.pengajuan_bantuan_id.each_with_index do |data, index|
+          if index == 0
+            penanggung_jawab = Pengajuan::PengajuanBantuan.pengajuan_baru_admin.first
+          else
+            data_pengajuan_beasiswa << Pengajuan::PengajuanBantuan.penggalangan_dana.where(:id => data).first
+          end
+        end
+        
+        selected_penggalangan_dana = penggalangan_dana.attributes.merge({
+          :pengajuan_bantuan_id => penanggung_jawab,
+          :data_donatur => getDataDonaturByPenggalanganDana(penggalangan_dana.id),
+          :penerima_bantuan => data_pengajuan_beasiswa,
+          :durasi => getDurasiPenggalanganDana(penggalangan_dana.id)
         })
       end
+      selected_penggalangan_dana["penanggung_jawab"] = selected_penggalangan_dana.delete('pengajuan_bantuan_id')
       render json: {
         response_code: Constants::RESPONSE_SUCCESS, 
         response_message: "Success", 
@@ -420,97 +413,18 @@ class V1::Penggalangan::PenggalanganDanaController < ApplicationController
     end
   end
 
-  def getTotalPengeluaran(penggalangan_dana_id)
-    penggalangan_dana = Penggalangan::PenggalanganDana.where(id: penggalangan_dana_id).first
-    donasi = Penggalangan::Donasi.approved.where(id: penggalangan_dana.donasi_id)
-    total_donasi = donasi.pluck(:nominal).inject(0, :+)
-    penyaluran = total_donasi - penggalangan_dana.total_nominal_terkumpul
-    return penyaluran
-  end
-
-  def getSaldoAwal
-    pengajuan_bantuan = Pengajuan::PengajuanBantuan.pengajuan_done_admin
-    if not pengajuan_bantuan.present?
-      saldo_awal = 0
+  def getNominalTerkumpulPenggalanganDana(penggalangan_dana_id)
+    penggalangan_dana = Penggalangan::PenggalanganDana.where(_id: penggalangan_dana_id).first
+    if not penggalangan_dana.donasi_id.present?
+      total_donasi = 0
     else
-      penggalangan_dana = Penggalangan::PenggalanganDana.where(:pengajuan_bantuan_id.in => pengajuan_bantuan.pluck(:id))
-      donasi = Penggalangan::Donasi.approved.where(:id => penggalangan_dana.donasi_id)
-      total_donasi = donasi.pluck(:nominal).inject(0, :+)
-      penyaluran = total_donasi - penggalangan_dana.total_nominal_terkumpul
-      saldo_awal = total_donasi - penyaluran
-    end
-    return saldo_awal
-  end
-
-  def getSaldoAkhir(penggalangan_dana_id)
-    penggalangan_dana = Penggalangan::PenggalanganDana.where(id: penggalangan_dana_id).first
-    donasi = Penggalangan::Donasi.approved.where(:id => penggalangan_dana.donasi_id)
-    total_donasi = donasi.pluck(:nominal).inject(0, :+)
-    penyaluran = total_donasi - penggalangan_dana.total_nominal_terkumpul
-    saldo_akhir = total_donasi - penyaluran
-    return saldo_akhir
-  end
-
-  def getApprovedDonasiByPenggalanganDana
-    penggalangan_dana = Penggalangan::PenggalanganDana.where(id: params[:id]).first
-    if not penggalangan_dana.present?
-      render json: {
-        response_code: Constants::ERROR_CODE_VALIDATION,
-        response_message: "Data Penggalangan Dana tidak ditemukan!"
-        }, status: :unprocessable_entity
-    elsif not penggalangan_dana.donasi_id.present?
-      render json: {
-        response_code: Constants::ERROR_CODE_VALIDATION,
-        response_message: "Belum ada donasi pada penggalangan dana ini!"
-        }, status: :unprocessable_entity
-    else
-      if penggalangan_dana.pengajuan_bantuan_id.kind_of?(Array)
-        pengajuan_bantuan = Pengajuan::PengajuanBantuan.where(:id => penggalangan_dana.pengajuan_bantuan_id[0]).first
-      else
-        pengajuan_bantuan = Pengajuan::PengajuanBantuan.where(:id => penggalangan_dana.pengajuan_bantuan_id).first
-      end
       donasi = Penggalangan::Donasi.approved.where(:id.in => penggalangan_dana.donasi_id)
       if not donasi.present?
-        render json: {
-          response_code: Constants::ERROR_CODE_VALIDATION,
-          response_message: "Tidak ada data donasi pada penggalangan dana ini!"
-          }, status: :unprocessable_entity
+        total_donasi = 0
       else
-        if donasi.length > 1
-          data_donasi = []
-          donasi.each_with_index do |data_donation, index_donasi|
-            donatur = User::Donatur.donatur_registered.where(:donasi_id => data_donation.id).first
-            bank = Bank.where(:id => donatur.bank_id).first
-            object_data_donasi = penggalangan_dana.attributes.merge({
-              :pengajuan_bantuan_id => pengajuan_bantuan,
-              :donasi_id => donatur.attributes.merge({
-                :donasi_id => data_donation,
-                :bank_id => bank,
-                })
-            })
-            object_data_donasi["donatur"] = object_data_donasi.delete("donasi_id")
-            data_donasi << object_data_donasi
-          end
-          
-          donasi_penggalangan_dana = data_donasi.reverse
-        else
-          donatur = User::Donatur.donatur_registered.where(:donasi_id => donasi.first.id).first
-          bank = Bank.where(:id => donatur.bank_id).first
-          donasi_penggalangan_dana = penggalangan_dana.attributes.merge({
-            :pengajuan_bantuan_id => pengajuan_bantuan,
-            :donasi_id => donatur.attributes.merge({
-              :donasi_id => donasi.first,
-              :bank_id => bank,
-              })
-          })
-          donasi_penggalangan_dana["donatur"] = donasi_penggalangan_dana.delete("donasi_id")
-        end
-        render json: {
-          response_code: Constants::RESPONSE_SUCCESS, 
-          response_message: "Success", 
-          data: donasi_penggalangan_dana
-          }, status: :ok
+        total_donasi = donasi.pluck(:nominal).inject(0, :+)
       end
+      return total_donasi
     end
   end
 
