# backend/swagger/v1/swagger.yaml
@@ -1621,16 +1621,13 @@ paths:
           properties:
             id:
               type: string
-              example: 64997232e21fac364c2d0d51
+              example: 64c16e4de21fac03ac15dcac
             judul_galang_dana:
               type: string
               example: Penggalangan Dana untuk Beasiswa
             deskripsi:
               type: string
               example: Penggalangan Dana untuk Beasiswa Mahasiswa JTK
-            waktu_galang_dana:
-              type: string
-              example: 30-12-2023
             total_pengajuan:
               type: integer
               example: 6
